--- a/app/static/css/demo.css
+++ b/app/static/css/demo.css
@@ -21,6 +21,19 @@ body {
 .warning{
 	 color: red;
 }
+.alertviagem{
+	color: #73C352;
+}
+.loading{
+	position:fixed;
+  width:100%;
+  height:100%;
+  background: url(../img/loading.gif) 50% 50% no-repeat rgb(255, 255, 255);
+  top:0px;
+  left:0px;
+  opacity:0.7;
+  z-index: 9;
+}
 .container-add{
 	max-width: 700px;
   margin: auto;
