--- a/app/templates/index_viagem.html
+++ b/app/templates/index_viagem.html
@@ -21,15 +21,20 @@
           <p><label>Origem Viagem: </label> {{ viagem.origem_viagem }}</p>
           <p><label>Destino Viagem: </label> {{ viagem.destino_viagem }}</p>
           <p><label>Inicio Viagem: </label> {{ viagem.data_inicio_viagem }}</p>
-          <p><label>Fim Viagem: </label> {{ viagem.data_fim_viagem }}</p>
-          <p><label>Status Viagem: </label> {{ viagem.status_viagem }}</p>
+            {% if viagem.status_viagem == 'em_andamento' %}
+              <p><label>Fim Viagem: </label> - </p>
+              <p class="alertviagem"><label>Status Viagem: </label> {{ viagem.status_viagem }}</p>
+            {%else%}
+              <p><label>Fim Viagem: </label> {{ viagem.data_fim_viagem }}</p>
+              <p><label>Status Viagem: </label> {{ viagem.status_viagem }}</p>
+            {%endif%}
           {% endif %}
           {% if viagem.status_ocorrencia == True %}
           <p><label>Status Ocorrencia: </label> Possui Ocorrencia <span class="warningtrue"></span></p>
           {% else %}
           <p class="warningfalse"><label>Status Ocorrencia: </label> Sem Ocorrencias</p>
           {% endif %}
-          <a href="/viagem/{{viagem.cd_viagem}}"><div class="ver_viagem"> Ver Viagem</div></a>
+          <a href="/viagem/{{viagem.cd_viagem}}"><div class="ver_viagem"> Detalhes</div></a>
       </div>
     </div>
 {% endfor %}
