--- a/app/templates/viagem.html
+++ b/app/templates/viagem.html
@@ -41,8 +41,16 @@
             <p class="alertviagem"><label>Status Viagem:</label> Viagem Em Andamento</p>
             {% else %}
             {% endif %}
-          <p><label>Origem Viagem: </label> {{ viagem.origem_viagem }}</p>
-          <p><label>Inicio Viagem: </label> {{ viagem.data_inicio_viagem }}</p>
+            {% if viagem.origem_viagem is not none %}
+            <p><label>Origem Viagem: </label> {{ viagem.origem_viagem }}</p>
+            {% else %}
+            <p><label>Origem Viagem: </label> - </p>
+            {% endif %}
+            {% if viagem.data_inicio_viagem is not none %}
+            <p><label>Inicio Viagem: </label> {{ viagem.data_inicio_viagem }}</p>
+            {% else %}
+            <p><label>Inicio Viagem: </label>-</p>
+            {% endif %}
           {% if viagem.status_viagem == 'cancelada' or viagem.status_viagem == 'finalizada' %}
           <p><label>Fim Viagem: </label> {{ viagem.data_fim_viagem }}</p>
           {%else%}
