--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -30,6 +30,7 @@
               <li><a class="gn-icon gn-icon-veiculos" href="/lista_veiculo">Listar Veiculos</a></li>
               <li><a class="gn-icon gn-icon-veiculo" href="/veiculo/add_veiculo">Cadastrar Veiculo</a></li>
               <!-- <li><a class="gn-icon gn-icon-ocorrencias" href="/lista_ocorrencia">Ocorrências<span class="gn-icon gn-icon-notifica"></span></a></li> -->
+              <li><a class="gn-icon gn-icon-locale" href="/lista_ocorrencia/map">Ver Ocorrências</a></li>
               <li><a class="gn-icon gn-icon-ocorrencias" href="/lista_ocorrencia">Listar Ocorrências</a></li>
             </ul>
           </div><!-- /gn-scroller -->
